refactor: improve response handling in CustomerApiIntegrationTests and simplify createMany method